third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/float/exp-point-3.stderr
TOML parse error at line 1, column 17
  |
1 | exp-point-3 = 3.e+20
  |                 ^
invalid floating-point number
expected digit
